default/objects/School__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICSC</fullName>
            </value>
            <value>
                <fullName>CBSC</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>