default/objects/School__c/fields/School_Country__c.field-meta.xml
<CustomField>
    <fullName>School_Country__c</fullName>
    <label>School Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country1</valueSetName>
    </valueSet>
</CustomField>